# RTE-2021-Innovation-Challenge

./: .gitignore  README.md  README.zh.md
.gitbk/: config  index  packed-refs
Application-Challenge/[Tornado] 欢言(bla-bla.app)/: README.md
Application-Challenge/[rethinking]都市探险家/: Readme.md
Application-Challenge/[你说的都队]Pixel Battle 像素战斗/: README.md
Application-Challenge/[史大伟] 教学助手/: README.md
Application-Challenge/ameet/: README.md
Application-Challenge/【AnakinChen】连麦问答PK/: .gitignore  LICENSE  Podfile  README.md  README_back.md
Application-Challenge/【Dooze】CircleLive/: README.md  build.gradle  local.properties  settings.gradle
Application-Challenge/【PLP】爱上漂流瓶/: README.md  server.js
Application-Challenge/【SPJH】视频聚会/: README.md  package-lock.json
Application-Challenge/【StarCode】AMeet/: LICENSE  pubspec.yaml
Application-Challenge/【XMDLAB-L】课堂坐姿检测/: GestureProcess.py  Readme.md  client.html  human_pose_estimation.py  models.lst  remote.html  requirment.txt  server.py
Application-Challenge/【YCST】GoAskMe/: README.md
Application-Challenge/【localhost】Ubilink/: README.md
Application-Challenge/【rrf】共享影院/: nginx.conf  readme.md  共享影院-项目介绍.docx
Application-Challenge/【webzard】Agora X-Runtime/: .gitignore  README.md
Application-Challenge/【xiaoyan】室内导航应用/: README.md
Application-Challenge/【zuyu小队】相约国粹/: README.md
Application-Challenge/【三点饮茶队】Video_Together/: README.md
Application-Challenge/【五子棋爱好者】五子棋争霸/: README.md  server.js  修改APPID.md
Application-Challenge/【交闪】Vchat/: README.md  package.json
Application-Challenge/【冰糖】烛光/: 烛光.pptx
Application-Challenge/【加油，打工人】AgoraHomeAI/: README.zh.md  说明文档.txt
Application-Challenge/【卷卷子】在线云医生/: 在线云医生.docx
Application-Challenge/【夏力维队】Web共享编辑页面生成器/: readme.md
Application-Challenge/【大司是我爹】约呗相亲/: 约呗相亲.docx
Application-Challenge/【宁夏路308号】CustomerServiceOnline/: README.md
Application-Challenge/【小游戏开发者们】WeIn/: LICENSE  README.md  ROADMAP.md
Application-Challenge/【小游戏开发者们】WeIn/android/vlive_audio/src/main/cpp/: CMakeLists.txt  audio_player.cpp  audio_render.cpp  common.h
Application-Challenge/【小游戏开发者们】WeIn/backend/: Cargo.toml
Application-Challenge/【小游戏开发者们】WeIn/backend/src/: basic.rs  bean.rs  lib.rs  main.rs  model.rs
Application-Challenge/【小羽队】音谱/: Podfile  README.md
Application-Challenge/【张显阳】Vchat/: README.md
Application-Challenge/【必加分】必加分/: readme.md
Application-Challenge/【我写的代码不队】PixelBattle/: README.md
Application-Challenge/【桃桃】在线自习室/: 在线自习室.pptx
Application-Challenge/【榛果】提词器/: 提词器.pptx
Application-Challenge/【步履阑珊】丁雨医生/: .gitignore  App.vue  README.md  main.js  manifest.json  pages.json  uni.scss
Application-Challenge/【毛巾队】在线云家教/: 在线云家教.docx
Application-Challenge/【汪汪大队】瑜你一起/: 瑜你一起.pptx
Application-Challenge/【瓜瓜队】在线云家教/: 在线云家教.docx
Application-Challenge/【瓜瓜队】狼人杀/: 狼人杀.docx
Application-Challenge/【知声】译音——聋哑人沟通无障碍/: README.md
Application-Challenge/【红鲤鱼与绿鲤鱼与驴】AgoraFlow/: .gitignore  README.md  mqtt-monitor.js  package-lock.json  (+1 more)
Demo/: Plugin_API.md  Readme.md
Demo/Agora_Extension_Android/AgoraWithByteDanceAndroid/agora-bytedance/src/main/cpp/: CMakeLists.txt
Demo/Agora_Extension_Android/AgoraWithByteDanceAndroid/agora-bytedance/src/main/cpp/AgoraRtcKit/: AgoraMediaPlayerTypes.h
Demo/Agora_Extension_Android/AgoraWithByteDanceAndroid/agora-bytedance/src/main/cpp/bytedance/: bef_effect_ai_api.h  bef_effect_ai_dynamic_action.h  bef_effect_ai_face_attribute.h  bef_effect_ai_face_clustering.h  bef_effect_ai_face_detect.h  bef_effect_ai_face_verify.h  bef_effect_ai_hairparser.h  bef_effect_ai_hand.h  bef_effect_ai_headseg.h  bef_effect_ai_human_distance.h  bef_effect_ai_lightcls.h  bef_effect_ai_pet_face.h  bef_effect_ai_portrait_matting.h  bef_effect_ai_public_define.h  bef_effect_ai_skeleton.h  bef_effect_ai_version.h  bef_effect_ai_yuv_process.h  byted_effect.h
Demo/Agora_Extension_Android/AgoraWithByteDanceAndroid/agora-bytedance/src/main/cpp/plugin_source_code/: AudioProcessor.h  ExtensionAudioFilter.h  ExtensionAudioProvider.cpp  ExtensionVideoFilter.cpp  ExtensionVideoFilter.h  ExtensionVideoProvider.cpp  ExtensionVideoProvider.h  JniHelper.h  VideoProcessor.cpp  VideoProcessor.h
(+8332 files in other folders)
